results updating
